--- a/DS_Bitácora_42_Series_de_Tiempo_(Desarrollo).ipynb
+++ b/DS_Bitácora_42_Series_de_Tiempo_(Desarrollo).ipynb
@@ -21,21 +21,10 @@
     },
     "colab": {
       "name": "DS_Bitácora_42_Series_de_Tiempo_(Desarrollo).ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/arromeroj/Acamica/blob/main/DS_Bit%C3%A1cora_42_Series_de_Tiempo_(Desarrollo).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -77,7 +66,8 @@
       },
       "source": [
         "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "drive.mount('/content/drive')\n",
+        "# comentario"
       ],
       "execution_count": null,
       "outputs": [
